sf dashboard-squashed

--- a/server/.env.example
+++ b/server/.env.example
@@ -4,7 +4,7 @@ JWT_EXPIRES_IN=15m
 
 # Database Configuration
 DB_NAME=salesforce_dashboard
-DB_USER=postgres
+DB_USER=test
 DB_PASSWORD=your_password
 DB_HOST=localhost
 
