--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^22.14.1",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -40,6 +41,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/jsforce": "^1.11.5",
     "@types/jsonwebtoken": "^9.0.9",
     "nodemon": "^3.1.9"
   }
